Added news routes
